[package]
authors = ['Piotr Olszewski <asmie@asmie.pl>']
name = "stamp-suite"
version = "0.2.0"
edition = "2021"
rust-version = "1.93.0"

categories = [
    "network-programming",
    "development-tools",
    "command-line-utilities",
]

license = "MIT"

homepage = "https://github.com/asmie/stamp-suite"
repository = "https://github.com/asmie/stamp-suite"

description = "Simple Two-Way Active Measurement Protocol (STAMP)"

readme = "README.md"

[features]
default = ["default-ttl"]
default-ttl = []
ttl-nix = ["nix"]
ttl-pnet = ["pnet"]

[dependencies]
chrono = "0.4.43"
clap = { version = "4.5", features = ["derive", "env"] }
env_logger = "0.11"
log = "0.4"
thiserror = "2.0"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Optional dependencies for explicit feature flags
nix = { version = "0.31", optional = true, features = ["socket", "uio", "net"] }
pnet = { version = "0.35", optional = true }

# Platform-specific default TTL backends
[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.31", features = ["socket", "uio", "net"] }

[target.'cfg(any(target_os = "windows", target_os = "macos"))'.dependencies]
pnet = { version = "0.35" }

[dependencies.tokio]
version = "1.49"
features = ["full"]