[package]
authors = ['Piotr Olszewski <asmie@asmie.pl>']
name = "stamp-suite"
version = "0.3.1"
edition = "2021"
rust-version = "1.93.0"

categories = [
    "network-programming",
    "development-tools",
    "command-line-utilities",
]

license = "MIT"

homepage = "https://github.com/asmie/stamp-suite"
repository = "https://github.com/asmie/stamp-suite"

description = "Simple Two-Way Active Measurement Protocol (STAMP)"

readme = "README.md"

[features]
default = []
ttl-nix = ["dep:nix"]
ttl-pnet = ["dep:pnet"]
metrics = ["dep:axum", "dep:metrics", "dep:metrics-exporter-prometheus", "dep:tokio-util"]

[dependencies]
chrono = "0.4.43"
clap = { version = "4.5", features = ["derive", "env"] }
env_logger = "0.11"
log = "0.4"
thiserror = "2.0"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
subtle = "2.6"

# TTL backend dependencies (all optional, selected by features)
nix = { version = "0.31", optional = true, default-features = false, features = ["socket", "uio", "net"] }
pnet = { version = "0.35", optional = true }

# Metrics dependencies (optional, enabled by "metrics" feature)
axum = { version = "0.8", optional = true }
metrics = { version = "0.24", optional = true }
metrics-exporter-prometheus = { version = "0.18", optional = true }
tokio-util = { version = "0.7", optional = true, features = ["rt"] }

[dependencies.tokio]
version = "1.49"
features = ["rt-multi-thread", "net", "time", "macros"]

# Platform-specific default backends
# Note: These provide defaults when no explicit ttl-* feature is used.
# Using --features ttl-pnet on Linux will compile both nix and pnet,
# but only pnet will be used at runtime due to cfg checks in mod.rs.
[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
nix = { version = "0.31", default-features = false, features = ["socket", "uio", "net"] }

[target.'cfg(target_os = "windows")'.dependencies]
pnet = "0.35"