[package]
authors = ['Piotr Olszewski <asmie@asmie.pl>']
name = "stamp-suite"
version = "0.6.1"
edition = "2021"
rust-version = "1.93.0"

categories = [
    "network-programming",
    "development-tools",
    "command-line-utilities",
]

license = "MIT"

homepage = "https://github.com/asmie/stamp-suite"
repository = "https://github.com/asmie/stamp-suite"

description = "Simple Two-Way Active Measurement Protocol (STAMP)"

readme = "README.md"

[features]
default = []
ttl-nix = ["dep:nix"]
ttl-pnet = ["dep:pnet"]
metrics = ["dep:axum", "dep:metrics", "dep:metrics-exporter-prometheus", "dep:tokio-util"]
snmp = []

[dependencies]
chrono = "0.4.43"
clap = { version = "4.5", features = ["derive", "env"] }
env_logger = "0.11"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = { version = "1.1", default-features = false, features = ["parse", "serde"] }
thiserror = "2.0"
hmac = "0.13"
sha2 = "0.11"
hex = "0.4"
subtle = "2.6"
zeroize = "1"

# TTL backend dependencies (all optional, selected by features)
nix = { version = "0.31", optional = true, default-features = false, features = ["socket", "uio", "net"] }
pnet = { version = "0.35", optional = true }

# Metrics dependencies (optional, enabled by "metrics" feature)
axum = { version = "0.8", optional = true }
metrics = { version = "0.24", optional = true }
metrics-exporter-prometheus = { version = "0.18", optional = true }
tokio-util = { version = "0.7", optional = true, features = ["rt"] }

[dependencies.tokio]
version = "1.49"
features = ["rt-multi-thread", "net", "time", "macros", "signal"]

# Platform-specific default backends
# Note: These provide defaults when no explicit ttl-* feature is used.
# Using --features ttl-pnet on Linux will compile both nix and pnet,
# but only pnet will be used at runtime due to cfg checks in mod.rs.
[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
nix = { version = "0.31", default-features = false, features = ["socket", "uio", "net"] }

[target.'cfg(target_os = "windows")'.dependencies]
pnet = "0.35"

[dev-dependencies]
tempfile = "3"

[package.metadata.deb]
maintainer = "Piotr Olszewski <asmie@asmie.pl>"
copyright = "2024, Piotr Olszewski <asmie@asmie.pl>"
license-file = ["LICENSE", "0"]
extended-description = """\
stamp-suite is a Rust implementation of the Simple Two-Way Active \
Measurement Protocol (STAMP) as defined in RFC 8762 and RFC 8972. \
It provides a client-server application pair for measuring packet \
loss and network delays."""
section = "net"
priority = "optional"
depends = "$auto, adduser"
features = ["ttl-nix", "ttl-pnet", "metrics", "snmp"]
maintainer-scripts = "dist/debian/"
assets = [
    ["target/release/stamp-suite",                "usr/bin/",                                  "755"],
    ["dist/systemd/stamp-suite.service",          "lib/systemd/system/",                       "644"],
    ["mibs/STAMP-SUITE-MIB.mib",                  "usr/share/snmp/mibs/",                      "644"],
    ["README.md",                                 "usr/share/doc/stamp-suite/README.md",       "644"],
    ["doc/usage.md",                              "usr/share/doc/stamp-suite/usage.md",        "644"],
    ["doc/architecture.md",                       "usr/share/doc/stamp-suite/architecture.md", "644"],
    ["doc/security.md",                           "usr/share/doc/stamp-suite/security.md",     "644"],
]

[package.metadata.generate-rpm]
license = "MIT"
summary = "Simple Two-Way Active Measurement Protocol (STAMP)"
assets = [
    { source = "target/release/stamp-suite",       dest = "/usr/bin/stamp-suite",                         mode = "755" },
    { source = "dist/systemd/stamp-suite.service", dest = "/usr/lib/systemd/system/stamp-suite.service",  mode = "644", config = false },
    { source = "mibs/STAMP-SUITE-MIB.mib",         dest = "/usr/share/snmp/mibs/STAMP-SUITE-MIB.mib",     mode = "644" },
    { source = "LICENSE",                          dest = "/usr/share/doc/stamp-suite/LICENSE",           mode = "644", doc = true },
    { source = "README.md",                        dest = "/usr/share/doc/stamp-suite/README.md",         mode = "644", doc = true },
    { source = "doc/usage.md",                     dest = "/usr/share/doc/stamp-suite/usage.md",          mode = "644", doc = true },
    { source = "doc/architecture.md",              dest = "/usr/share/doc/stamp-suite/architecture.md",   mode = "644", doc = true },
    { source = "doc/security.md",                  dest = "/usr/share/doc/stamp-suite/security.md",       mode = "644", doc = true },
]
pre_install_script = """
getent group stamp >/dev/null || groupadd -r stamp
getent passwd stamp >/dev/null || useradd -r -g stamp -s /sbin/nologin -d /nonexistent -c "STAMP Suite service account" stamp
exit 0
"""
post_install_script = """
systemctl daemon-reload || :
systemctl preset stamp-suite.service || :
"""
pre_uninstall_script = """
if [ $1 -eq 0 ]; then
    systemctl --no-reload disable --now stamp-suite.service || :
fi
"""
post_uninstall_script = """
systemctl daemon-reload || :
if [ $1 -ge 1 ]; then
    systemctl try-restart stamp-suite.service || :
fi
"""

[package.metadata.generate-rpm.requires]
shadow-utils = "*"
